# requake

./: .gitattributes  .gitignore  .pylintrc  .sourcery.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.txt  ChangeLog.txt  MANIFEST.in  README.md  RELEASE_HEAD.md  pyproject.toml  requake_conda_env.yml  setup.cfg  setup.py
.githooks/: pre-commit
.github/workflows/: ci-checks.yml  ci.yml  github-deploy.yml  publish-github-release.yml  publish-to-pypi.yml  pypi-release.yml
docs/: .gitignore  citing.rst  conf.py  database_schemas.rst  index.rst  installation.rst  performances.rst  read_catalog.rst  refs.bib  requirements.txt  running.rst  scan_catalog.rst  slip_models.rst  wfcache.rst  write_configfile.py
docs/_static/: custom.css
requake/: __init__.py  _version.py  arrivals.py  build_families.py  build_templates.py  cached_tiler.py  catalog.py  config.py  data_types.py  families.py  flag_family.py  main.py  map_families.py  map_tiles.py  pager.py  parallel_utils.py  parse_arguments.py  plot_families.py  plot_pair.py  plot_slip.py  plot_timespans.py  print_families.py  read_catalog.py  rq_setup.py  scan_catalog.py  scan_templates.py  slip.py  station_metadata.py  utils.py  waveforms.py
requake/catalog/: __init__.py  catalog.py  print_catalog.py  read_catalog.py  read_catalog_from_csv.py  read_catalog_from_fdsnws.py  read_catalog_from_quakeml.py
requake/conf/: configspec.conf
requake/config/: __init__.py  config.py  configspec.conf  generic_printer.py  parse_arguments.py  rq_setup.py  utils.py
requake/database/: __init__.py  catalog.py  db.py  families.py  pairs.py  templates.py  trace_metadata.py
requake/families/: __init__.py  build_families.py  build_templates.py  families.py  flag_family.py  pairs.py  print_families.py  print_pairs.py
requake/formulas/: __init__.py  conversion.py  moment.py  slip.py
requake/plot/: __init__.py  cached_tiler.py  (+9 more)
scripts/: check_style.sh  cleanup_whitespace.sh  make_release.sh  release.sh  setup_local_hooks.sh
tests/: run_all_tests.sh
(+50 files in other folders)
